// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BoBorderedLayoutrder /> without props 1`] = `
<BorderedLayout>
  <MobileLayout
    disabledOn={
      Array [
        "xxs",
      ]
    }
  >
    <div
      className="layout mobile disabled-xxs"
    >
      <div
        className="inner"
      >
        Hello, world
      </div>
    </div>
  </MobileLayout>
</BorderedLayout>
`;

exports[`<BoBorderedLayoutrder /> without props 2`] = `
<BorderedLayout
  bottom={false}
  top={true}
>
  <MobileLayout
    disabledOn={
      Array [
        "xxs",
      ]
    }
  >
    <div
      className="layout mobile disabled-xxs"
    >
      <div
        className="inner inner-border-top"
      >
        Hello, world
      </div>
    </div>
  </MobileLayout>
</BorderedLayout>
`;

exports[`<BoBorderedLayoutrder /> without props 3`] = `
<BorderedLayout
  bottom={true}
  top={false}
>
  <MobileLayout
    disabledOn={
      Array [
        "xxs",
      ]
    }
  >
    <div
      className="layout mobile disabled-xxs"
    >
      <div
        className="inner inner-border-bottom"
      >
        Hello, world
      </div>
    </div>
  </MobileLayout>
</BorderedLayout>
`;

exports[`<BoBorderedLayoutrder /> without props 4`] = `
<BorderedLayout
  bottom={true}
  top={true}
>
  <MobileLayout
    disabledOn={
      Array [
        "xxs",
      ]
    }
  >
    <div
      className="layout mobile disabled-xxs"
    >
      <div
        className="inner inner-border-y"
      >
        Hello, world
      </div>
    </div>
  </MobileLayout>
</BorderedLayout>
`;
